@@ -25,6 +25,11 @@
    available. The Rust implementation already raised the correct exception.
    (#1606, Jelmer Vernooĳ)
 
+ * Fix ``porcelain.reset --hard`` to properly delete files that don't exist in
+   the target tree. Previously, when resetting to a remote branch, files deleted
+   in the remote were not removed locally due to incorrect path normalization
+   on Windows. (#840, Jelmer Vernooĳ)
+
 0.23.0	2025-06-21
 
  * Add basic ``rebase`` subcommand. (Jelmer Vernooĳ)
